added online market sites section and edited  media query of header

--- a/index.html
+++ b/index.html
@@ -53,5 +53,37 @@
     </header>
 
     <!-- header end -->
+
+     <main>
+        <!-- online market sites section start -->
+
+        <section class="market-sites-section">
+            <div class="logos-container">
+                <div class="logo alibaba">
+                    <a href="https://www.alibaba.com/" target="_blank"><img src="logos/Alibaba.svg" alt="alibaba logo"></a>
+                </div>
+                <div class="logo amazon">
+                   <a href="https://www.amazon.com/" target="_blank"><img src="logos/Amazon.svg" alt="amazon logo"></a>
+                </div>
+                <div class="logo daraz">
+                   <a href="https://daraz.com/" target="_blank"><img src="logos/Daraz.pk Logo.svg" alt="daraz logo"></a>
+                </div>
+                <div class="logo ebay">
+                   <a href="https://www.ebay.com/" target="_blank"><img src="logos/Ebay.svg" alt="ebay logo"></a>
+                </div>
+                <div class="logo rakuten">
+                    <a href="https://www.rakuten.com/" target="_blank"><img src="logos/Rakuten.svg" alt="rakuten logo"></a>
+                </div>
+                <div class="logo walmart">
+                    <a href="https://www.walmart.com/" target="_blank"><img src="logos/Walmart.svg" alt="walmart logo"></a>
+                </div>
+                <div class="logo target">
+                    <a href="https://www.target.com/" target="_blank"><img src="logos/Target.svg" alt="target logo"></a>
+                </div>
+            </div>
+        </section>
+        <!-- online market sites section end-->
+         
+     </main>
 </body>
 </html>
