edited popular collection section and made it mobile screen responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Personal Web</title>
+    <link rel="shortcut icon" href="images/camera.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <script src="https://kit.fontawesome.com/688e7a57b2.js" crossorigin="anonymous"></script>
@@ -15,7 +16,7 @@
     <header class="header-main">
         <div class="nav-main">
             <div class="influencer-title">
-                <h2>Influencer products</h2>
+                <h2>Influencer Products</h2>
             </div>
             <div class="bars-icon">
                 <i class="fa-solid fa-bars"></i>
@@ -111,6 +112,7 @@
                     <p class="content-data">Worldwide shifting available
                         Buyers protection possible!</p>
                         </div>
+
                 <div class="second-content-parent">
                     <div class="second-content-image">
                         <img src="images/mic.png" alt="microphone image">
@@ -131,6 +133,7 @@
                     <p class="content-data">Worldwide shifting available
                         Buyers protection possible!</p>
                         </div>
+
                 <div class="third-content-parent">
                     <div class="third-content-image">
                         <img src="images/airpod.png" alt="airpod image">
@@ -151,6 +154,7 @@
                     <p class="content-data">Worldwide shifting available
                         Buyers protection possible!</p>
                         </div>
+
                 <div class="fourth-content-parent">
                     <div class="fourth-content-image">
                         <img src="images/drone.png" alt="drone image">
@@ -171,6 +175,7 @@
                     <p class="content-data">Worldwide shifting available
                         Buyers protection possible!</p>
                         </div>
+
                 <div class="fifth-content-parent">
                     <div class="fifth-content-image">
                         <img src="images/lights.png" alt="light setup image">
@@ -191,6 +196,7 @@
                     <p class="content-data">Worldwide shifting available
                         Buyers protection possible!</p>
                         </div>
+
                 <div class="sixth-content-parent">
                     <div class="sixth-content-image">
                         <img src="images/setup.png" alt="photo shoot set image">
@@ -211,6 +217,7 @@
                     <p class="content-data">Worldwide shifting available
                         Buyers protection possible!</p>
                         </div>
+
                 <div class="seventh-content-parent">
                     <div class="seventh-content-image">
                         <img src="images/camera.png" alt="vlogging camera image">
@@ -231,6 +238,7 @@
                     <p class="content-data">Worldwide shifting available
                         Buyers protection possible!</p>
                         </div>
+
                 <div class="eighth-content-parent">
                     <div class="eighth-content-image">
                         <img src="images/single-light.png" alt="green screen image">
@@ -251,6 +259,7 @@
                     <p class="content-data">Worldwide shifting available
                         Buyers protection possible!</p>
                         </div>
+
                 <div class="ninth-content-parent">
                     <div class="ninth-content-image">
                         <img src="images/action.png" alt="action camera image">
@@ -272,6 +281,8 @@
                         Buyers protection possible!</p>
                 </div>
             </div>
+
+            <span class="see-more">See More <i class="fa-solid fa-arrow-right"></i></span>
            
         </section>
         <!-- popular collection section end -->
